Finished a moving target with JS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Moving Target</title>
 </head>
 <body>
+
+    <div class="line horizontal"></div>
+    <div class="line vertical"></div>
+    <img src="img/target.png" class="target" alt="target">
+    <span class="tag">x and y</span>
     
 </body>
 </html>
